contracts/protocol/stellar/contracts/macro-integration-tests/tests/ui/oapp/fail/missing_lz_receive_internal.stderr
error[E0277]: the trait bound `MyOApp: LzReceiveInternal` is not satisfied
 --> tests/ui/oapp/fail/missing_lz_receive_internal.rs:7:12
  |
7 | pub struct MyOApp;
  |            ^^^^^^ the trait `LzReceiveInternal` is not implemented for `MyOApp`
  |
note: required by a bound in `OAppReceiver`
 --> $WORKSPACE/contracts/oapps/oapp/src/oapp_receiver.rs
  |
  | pub trait OAppReceiver: OAppCore + LzReceiveInternal {
  |                                    ^^^^^^^^^^^^^^^^^ required by this bound in `OAppReceiver`

error[E0277]: the trait bound `MyOApp: LzReceiveInternal` is not satisfied
 --> tests/ui/oapp/fail/missing_lz_receive_internal.rs:7:12
  |
7 | pub struct MyOApp;
  |            ^^^^^^ the trait `LzReceiveInternal` is not implemented for `MyOApp`
  |
note: required by a bound in `oapp::oapp_receiver::OAppReceiver::allow_initialize_path`
 --> $WORKSPACE/contracts/oapps/oapp/src/oapp_receiver.rs
  |
  | pub trait OAppReceiver: OAppCore + LzReceiveInternal {
  |                                    ^^^^^^^^^^^^^^^^^ required by this bound in `OAppReceiver::allow_initialize_path`
...
  |     fn allow_initialize_path(env: &soroban_sdk::Env, origin: &endpoint_v2::Origin) -> bool {
  |        --------------------- required by a bound in this associated function

error[E0277]: the trait bound `MyOApp: LzReceiveInternal` is not satisfied
 --> tests/ui/oapp/fail/missing_lz_receive_internal.rs:7:12
  |
7 | pub struct MyOApp;
  |            ^^^^^^ the trait `LzReceiveInternal` is not implemented for `MyOApp`
  |
note: required by a bound in `oapp::oapp_receiver::OAppReceiver::next_nonce`
 --> $WORKSPACE/contracts/oapps/oapp/src/oapp_receiver.rs
  |
  | pub trait OAppReceiver: OAppCore + LzReceiveInternal {
  |                                    ^^^^^^^^^^^^^^^^^ required by this bound in `OAppReceiver::next_nonce`
...
  |     fn next_nonce(_env: &soroban_sdk::Env, _src_eid: u32, _sender: &soroban_sdk::BytesN<32>) -> u64 {
  |        ---------- required by a bound in this associated function

error[E0277]: the trait bound `MyOApp: LzReceiveInternal` is not satisfied
 --> tests/ui/oapp/fail/missing_lz_receive_internal.rs:7:12
  |
7 | pub struct MyOApp;
  |            ^^^^^^ the trait `LzReceiveInternal` is not implemented for `MyOApp`
  |
note: required by a bound in `oapp::oapp_receiver::OAppReceiver::lz_receive`
 --> $WORKSPACE/contracts/oapps/oapp/src/oapp_receiver.rs
  |
  | pub trait OAppReceiver: OAppCore + LzReceiveInternal {
  |                                    ^^^^^^^^^^^^^^^^^ required by this bound in `OAppReceiver::lz_receive`
...
  |     fn lz_receive(
  |        ---------- required by a bound in this associated function

error[E0277]: the trait bound `MyOApp: LzReceiveInternal` is not satisfied
 --> tests/ui/oapp/fail/missing_lz_receive_internal.rs:7:12
  |
7 | pub struct MyOApp;
  |            ^^^^^^ the trait `LzReceiveInternal` is not implemented for `MyOApp`
  |
note: required by a bound in `is_compose_msg_sender`
 --> $WORKSPACE/contracts/oapps/oapp/src/oapp_receiver.rs
  |
  | pub trait OAppReceiver: OAppCore + LzReceiveInternal {
  |                                    ^^^^^^^^^^^^^^^^^ required by this bound in `OAppReceiver::is_compose_msg_sender`
...
  |     fn is_compose_msg_sender(
  |        --------------------- required by a bound in this associated function
